Fix modal positioning on mobile (Firefox)

--- a/src/styles/_modules.scss
+++ b/src/styles/_modules.scss
@@ -250,7 +250,8 @@
     display: inline-block;
     height: 100%;
     vertical-align: middle;
-    margin-right: -0.25em; /* Adjusts for spacing */
+    width: 1px;
+    margin-right: -6px; /* Adjusts for spacing */
   }
 }
 
